--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -20,10 +20,15 @@ $primary_green: rgb(62, 153, 62);
 
 .header{
     @include flexspacebetweencenter;
-    padding: 0.6rem 5%;
+    padding: 0.2rem 5%;
     background: #333;
+    backdrop-filter: blur(12px);
+    // background: transparent;
     color: $white_color;
-    min-height: 3rem;
+    min-height: 2rem;
+    border-bottom-left-radius: 5rem;
+    border-bottom-right-radius: 5rem;
+    box-shadow: 0px 3px 7px $white_color
 }
 
 
@@ -62,6 +67,6 @@ $primary_green: rgb(62, 153, 62);
     width: 6rem;
     border: none;
     border-radius: 2rem;
-    color: $white_color;
-    background: $primary_green;
+    color: $dark_color;
+    background: $white_color;
 }
