--- a/client/src/components/ui/variables/Variable.scss
+++ b/client/src/components/ui/variables/Variable.scss
@@ -2,6 +2,9 @@
 $dark_color: black;
 $white_color: white;
 $primary_green: rgb(62, 153, 62);
+$dark_green_color: rgb(0, 81, 0) ;
+$cream : #FFEEDB;
+$dark_cover_color: rgba(0, 0, 0, 0.475);
 
 
 @mixin flexspacebetweencenter{
