--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,4 +22,7 @@ body{
   background: #333;
   overflow-x: hidden;
   overflow-y: auto;
+  /* background-image: url('./assets/images/houseview.jpg'); */
+  /* opacity: 0.1; */
+  /* background-color: rgba(0, 0, 0, 0.475); */
 }
