--- a/client/src/pages/service/style/Service.scss
+++ b/client/src/pages/service/style/Service.scss
@@ -2,36 +2,43 @@
 @use '../../../components/ui/variables/Variable.scss' as *;
 
 .service_container{
-    // position: relative;
-    height: 100vh;
-    width: 100vw;
-    border: 1px solid red;
-    // opacity: 0.15;
+    width: 100%;
     color: white;
+    color: $cream;
+    background-color: $dark_cover_color;
+
 }
 
 .service_page_heading{
     @include flexcenter;
-    border: 2px solid white;
+    // border: 2px solid white;
     height: 6rem;
+    margin-top: 5rem;
+    background-color: $dark_cover_color;
+
 
 }
 
 .service_design_details_sections{
-    border: 1px solid red;
+    // border: 1px solid red;
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 20rem;
     padding: 1rem 5%;
+    background-color: $dark_cover_color;
 
     .display_section{
-        border: 2px solid yellow;
-        max-width: 17rem;
+        // border: 2px solid yellow;
+        max-width: 14rem;
         height: 7rem;
         display: flex;
         flex-direction: column;
         gap: 1rem;
         justify-content: space-between;
+
+        p{
+            font-size: 0.9rem;
+        }
     }
 }
