--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -24,13 +24,13 @@ $cream : #FFEEDB;
     width: 90%;
     padding: 0.2rem 5%;
     background: #333;
-    backdrop-filter: blur(12px);
+    // backdrop-filter: blur(12px);
     // background: transparent;
     color: $white_color;
     // color: $cream;
     min-height: 2rem;
-    // border-bottom-left-radius: 5rem;
-    // border-bottom-right-radius: 5rem;
+    border-bottom-left-radius: 5rem;
+    border-bottom-right-radius: 5rem;
     box-shadow: 0px 3px 7px $white_color
 }
 
