--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,3 +26,11 @@ body{
   /* opacity: 0.1; */
   /* background-color: rgba(0, 0, 0, 0.475); */
 }
+input{
+  line-height: 1.2rem;
+  height: 2rem;
+  padding: 0rem 0.3rem;
+  width: auto;
+}
+input:focus{
+}
