--- a/client/src/pages/service/style/Caraousel.scss
+++ b/client/src/pages/service/style/Caraousel.scss
@@ -11,6 +11,7 @@ $cream : #FFEEDB;
     background: linear-gradient(180deg, transparent 50%, $cream 50%);
     background: linear-gradient(180deg, $dark_cover_color 50%, $cream 50%);
     padding: 3rem 0rem;
+    position: relative;
 
 }
 
@@ -113,4 +114,91 @@ $cream : #FFEEDB;
 .CB13 {
     width: 15rem;
 
+}
+
+.add_caraousel_form_btn{
+    cursor: pointer;
+    border: none;
+    width: 5rem;
+    height: 2rem;
+    font-size: 1.1rem;
+    border-radius: 1rem;
+    background-color: #ffeedbc2;
+    color: $dark_green_color;
+    
+    &:hover{
+        background: $cream;
+    }
+}
+
+.add_caraousel_form{
+    // border: 2px solid red;
+    position: absolute;
+    height: 30rem;
+    width: 35rem;
+    top: 0;
+    border-radius: 0.6rem;
+
+    backdrop-filter: blur(8px);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.6rem 2%;
+    .add_craousel_image{
+        // border: 2px solid red;
+        cursor: pointer;
+        box-shadow: 0px 0px 10px black;
+        height: 20rem;
+        width: 50%;
+        border-radius: 0.5rem;
+
+        @include flexcenter;
+        padding: 0.6rem 0rem;
+        overflow: hidden;
+
+        img{
+            height: 95%;
+        }
+        &:hover{
+            box-shadow: 0px 0px 10px blue;
+        }
+    }
+
+    .add_caraousel_details{
+        // border: 2px solid green;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        height: 20rem;
+        width: 50%;
+        padding: 0rem 2%;
+
+        .text_desc{
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    .form_action_btn{
+        display: flex;
+        gap: 0.5rem;
+        button{
+            cursor: pointer;
+            width: 5rem;
+            height: 1.7rem;
+            color: $white_color;
+            font-size: 1rem;
+            border: none;
+            border-radius: 2px;
+            border: 1px solid rgba(0, 0, 0, 0.638);
+        }
+        .action_cancel{
+            background-color: rgb(228, 90, 90);
+        }
+        .action_add{
+            background-color: $cream;
+            color: $dark_green_color;
+        }
+    }
 }
