--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -29,9 +29,11 @@ $cream : #FFEEDB;
     color: $white_color;
     // color: $cream;
     min-height: 2rem;
-    border-bottom-left-radius: 5rem;
-    border-bottom-right-radius: 5rem;
-    box-shadow: 0px 3px 7px $white_color
+    // border-bottom-left-radius: 5rem;
+    // border-bottom-right-radius: 5rem;
+    box-shadow: 0px 3px 7px $white_color;
+    z-index: 11;
+    
 }
 
 
