--- a/client/src/pages/home/style/Home.scss
+++ b/client/src/pages/home/style/Home.scss
@@ -1,10 +1,10 @@
 .home_main_container{
     // border: 2px solid red;
-    position: absolute;
+    // position: absolute;
     height: 100%;
     // width: 100%;
     width: auto;
     background: linear-gradient(rgba(0, 0, 0, 0.641));
-    padding: 10rem;
+    padding: 6rem;
     color: white;
 }
