home-page-service-section

--- a/client/src/pages/home/style/Home.scss
+++ b/client/src/pages/home/style/Home.scss
@@ -8,3 +8,9 @@
     padding: 6rem;
     color: white;
 }
+
+@media screen and (max-width: 768px) {
+    .home_main_container{
+        padding: 6rem 0.2rem !important;
+    }
+}
