--- a/client/src/pages/home/style/Hero.scss
+++ b/client/src/pages/home/style/Hero.scss
@@ -3,99 +3,192 @@
 
 .hero_container {
     height: auto;
-    // border: 2px solid red;
+    width: 100%;
+    max-width: 1920px; // Added maximum width to maintain proportions on large screens
+    margin: 0 auto;
 }
 
 .hero_top {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    padding: 0 1rem;
+    box-sizing: border-box;
+
     .HT_content {
         @include flexspacebetweencenter;
-        // border: 2px solid lime;
+        width: 100%;
+        box-sizing: border-box;
 
         .heading {
-            // border: 2px solid yellow;
-            width: 45rem;
-            height: 20rem;
+            width: 54%; // Maintains similar ratio to 45rem/75rem (your original layout)
+            max-width: 45rem;
+            height: auto;
+            min-height: 20rem;
             display: flex;
             flex-direction: column;
             gap: 1rem;
+            justify-content: center;
 
             .head_text {
-                font-size: 5rem;
+                font-size: 5vw; // Responsive font size based on viewport width
                 font-family: "Indie Flower", cursive;
                 font-weight: 400;
                 font-style: normal;
+                line-height: 1.2;
+                max-font-size: 5rem; // Will be capped by media query
             }
 
             .hero_content {
-                // border: 2px solid red;
                 width: 90%;
-                height: auto;
-                display: flex;
-                justify-content: flex-start;
-                font-size: 1.5rem;
+                font-size: 1.5vw; // Responsive based on viewport
+                line-height: 1.5;
+                max-font-size: 1.5rem;
             }
         }
 
         .hero_image_section {
-            // @include flexcenter;
-            // border: 2px solid red;
-            width: 30rem;
-            height: 26rem;
+            width: 40%; // Maintains similar ratio to 30rem/75rem
+            max-width: 30rem;
+            height: auto;
+            aspect-ratio: 30/26; // Preserves your original image ratio
             overflow: hidden;
 
             img {
+                width: 100%;
                 height: 100%;
+                object-fit: cover;
             }
         }
     }
-
-
 }
 
-.hero_footer{
-    // border: 2px solid goldenrod;
-    height: 100%;
+.hero_footer {
+    height: auto;
     display: flex;
     justify-content: flex-end;
     padding: 1rem;
+    width: 100%;
+    box-sizing: border-box;
 
-    // .blank_box{
-    //     // border: 2px solid limegreen;
-    //     // border: 3px  solid white;
-    //     height: 6rem;
-    //     width: 6rem;
-    //     // position: absolute;
-    // }
-
-    .footer_right_box{
+    .footer_right_box {
         position: relative;
-        ._footer_image_section{
-            @include flexcenter;
-            // border: 2px solid magenta;
-            position: relative;
-            width: 34rem;
-            height: 20rem;
-            z-index: 11;
+        width: 45%; // Maintains ratio similar to original
+        max-width: 38rem;
 
+        ._footer_image_section {
+            @include flexcenter;
+            position: relative;
+            width: 100%;
+            height: auto;
+            aspect-ratio: 34/20; // Preserves original ratio
+            z-index: 11;
             overflow: hidden;
 
-            img{
+            img {
                 width: 100%;
+                height: 100%;
+                // object-fit: contain;
             }
         }
-        .design_box{
+
+        .design_box {
             position: absolute;
             top: -1rem;
             left: -1rem;
-            border: 3px  solid white;
-            height: 6rem;
-            width: 6rem;
+            border: 3px solid white;
+            height: 6vw; // Responsive size
+            width: 6vw;
+            max-height: 6rem;
+            max-width: 6rem;
         }
     }
-    
 }
 
 
+// responsiveness
+
+@media screen and (min-width: 1200px) {
+    .hero_top {
+        .HT_content {
+            .heading {
+                .head_text {
+                    font-size: 5rem; 
+                }
+                .hero_content {
+                    font-size: 1.5rem;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .HT_content {
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .heading {
+        width: 100% !important;
+        max-width: 45rem;
+        height: auto !important;
+        padding: 0 1rem !important;
+        text-align: center;
+
+        .head_text {
+            font-size: 3rem !important;
+        }
+        .hero_content {
+            font-size: 1rem !important;
+            margin: 0 auto;
+            text-align: center;
+        }
+    }
+
+    .hero_image_section {
+        width: 100% !important;
+        max-width: 30rem;
+        height: auto !important;
+    }
+
+    .hero_footer {
+        justify-content: center !important;
+        
+        .footer_right_box {
+            width: 100%;
+            max-width: 34rem;
+            
+            ._footer_image_section {
+                width: 100% !important;
+                height: auto !important;
+            }
+            
+            .design_box {
+                height: 4rem !important;
+                width: 4rem !important;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .heading {
+        .head_text {
+            font-size: 2.5rem !important;
+        }
+        .hero_content {
+            font-size: 0.9rem !important;
+        }
+    }
+    
+    .hero_footer {
+        .footer_right_box {
+            .design_box {
+                height: 3rem !important;
+                width: 3rem !important;
+            }
+        }
+    }
+}
