--- a/client/src/pages/service/style/Service.scss
+++ b/client/src/pages/service/style/Service.scss
@@ -35,6 +35,8 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        color: black;
+        // background: $cream;
         justify-content: space-between;
 
         p{
