--- a/client/src/pages/home/style/Home.scss
+++ b/client/src/pages/home/style/Home.scss
@@ -5,7 +5,7 @@
     // width: 100%;
     width: auto;
     background: linear-gradient(rgba(0, 0, 0, 0.641));
-    padding: 6rem;
+    padding: 6rem 0rem 0rem 0rem;
     color: white;
 }
 
