--- a/client/src/pages/service/style/Caraousel.scss
+++ b/client/src/pages/service/style/Caraousel.scss
@@ -2,6 +2,46 @@
 
 $cream : #FFEEDB;
 
+@keyframes slideLeft {
+  0% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(-100%);
+    // transform: translate(-50%, 50%);
+    opacity: 0;
+  }
+}
+
+@keyframes lastslideLeftDown {
+  0% {
+      transform: translateX(0%);
+      opacity: 1;
+    }
+    50%{
+
+        border-radius: 0rem;
+        // transform: scale(1.2);
+    }
+    100% {
+        border-radius: 0rem;
+        transform: scale(1.6);
+        // transform: translateX(-100%);
+    transform: translate(-50%, 50%);
+    opacity: 0;
+  }
+}
+
+.slide-left {
+  animation: slideLeft 1.2s ease forwards;
+}
+
+.slide-left-down{
+    animation: lastslideLeftDown 0.5s ease forwards;
+}
+
+
 .caraousel {
     // border: 1px solid magenta;
     height: 30rem;
@@ -9,7 +49,7 @@ $cream : #FFEEDB;
     justify-content: center;
     // align-items: center;
     background: linear-gradient(180deg, transparent 50%, $cream 50%);
-    background: linear-gradient(180deg, $dark_cover_color 50%, $cream 50%);
+    // background: linear-gradient(180deg, $dark_cover_color 50%, $cream 50%);
     padding: 3rem 0rem;
     position: relative;
 
@@ -200,5 +240,11 @@ $cream : #FFEEDB;
             background-color: $cream;
             color: $dark_green_color;
         }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .CB13{
+        display: none;
     }
 }
