--- a/client/src/pages/service/style/Service.scss
+++ b/client/src/pages/service/style/Service.scss
@@ -6,6 +6,7 @@
     color: white;
     color: $cream;
     background-color: $dark_cover_color;
+    position: absolute;
 
 }
 
@@ -13,8 +14,8 @@
     @include flexcenter;
     // border: 2px solid white;
     height: 6rem;
-    margin-top: 5rem;
-    background-color: $dark_cover_color;
+    margin-top: 4rem;
+    // background-color: $dark_cover_color;
 
 
 }
@@ -24,9 +25,10 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    gap: 1rem;
     height: 20rem;
     padding: 1rem 5%;
-    background-color: $dark_cover_color;
+    // background-color: $dark_cover_color;
 
     .display_section{
         // border: 2px solid yellow;
