--- a/client/src/pages/home/style/Home.scss
+++ b/client/src/pages/home/style/Home.scss
@@ -15,19 +15,6 @@
     }
 }
 
-// @keyframes blackScreenAnimation {
-//     0%{
-//         background: black;
-//     }
-//     99%{
-//         background: black;
-//     }
-// }
-
-// .black_animation{
-//     animation: blackScreenAnimation 2.4s ease forwards;
-// }
-
 .black_out {
     background: black;
     min-height: 100vh;
@@ -40,4 +27,12 @@
     background-repeat: no-repeat;
     min-height: 100vh;
     position: relative;
+}
+
+.home_animation_box{
+    display: flex;
+    flex-direction: column;
+    gap : 1rem;
+    background-color: #FFEEDB;
+    padding: 0rem 6%;
 }
