--- a/client/src/pages/home/style/Home.scss
+++ b/client/src/pages/home/style/Home.scss
@@ -15,10 +15,16 @@
     }
 }
 
+@keyframes blackscreenanimation {
+    0%{ background: black; };
+    100%{ background: black; }
+}
+
 .black_out {
-    background: black;
-    min-height: 100vh;
-    position: relative;
+    // background: black;
+    // min-height: 100vh;
+    // position: relative;
+    animation: blackscreenanimation 2s ease forwards;
 }
 
 .home_items_display {
@@ -35,4 +41,10 @@
     gap : 1rem;
     background-color: #FFEEDB;
     padding: 0rem 6%;
+}
+
+.home_animation_box2{
+    background-color: #FFEEDB;
+    padding: 0rem 6%;
+    border: 2px solid red;
 }
