--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,7 @@ li {
 
 body{
   background: #333;
+  background: #0e0e0e;
   overflow-x: hidden;
   overflow-y: auto;
   /* background-image: url('./assets/images/houseview.jpg'); */
