--- a/client/src/pages/service/components/subscription/Subscription.scss
+++ b/client/src/pages/service/components/subscription/Subscription.scss
@@ -2,6 +2,7 @@
   background: #feeede;
   padding: 4rem 1rem;
   text-align: center;
+  margin-bottom: 4rem;
 
   &__container {
     max-width: 800px;
