--- a/client/src/pages/home/style/Hero.scss
+++ b/client/src/pages/home/style/Hero.scss
@@ -98,7 +98,8 @@
 
             .head_text {
                 font-size: 5vw;
-                font-family: "Indie Flower", cursive;
+                // font-family: "Indie Flower", cursive;
+                font-family: 'Bonita', sans-serif;
                 font-weight: 400;
                 font-style: normal;
                 line-height: 1.2;
@@ -110,6 +111,7 @@
                 width: 90%;
                 font-size: 1.5vw; 
                 line-height: 1.5;
+                font-family: 'Roboto', sans-serif;
                 max-font-size: 1.5rem;
             }
         }
