--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,5 +33,11 @@ input{
   padding: 0rem 0.3rem;
   width: auto;
 }
-input:focus{
+
+@font-face {
+  font-family: 'Bonita';
+  src: url('./fonts/bonita.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
 }
+
