--- a/client/src/pages/service/style/Caraousel.scss
+++ b/client/src/pages/service/style/Caraousel.scss
@@ -3,41 +3,44 @@
 $cream : #FFEEDB;
 
 @keyframes slideLeft {
-  0% {
-    transform: translateX(0%);
-    opacity: 1;
-  }
-  100% {
-    transform: translateX(-100%);
-    // transform: translate(-50%, 50%);
-    opacity: 0;
-  }
+    0% {
+        transform: translateX(0%);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateX(-100%);
+        // transform: translate(-50%, 50%);
+        opacity: 0;
+    }
 }
 
 @keyframes lastslideLeftDown {
-  0% {
-      transform: translateX(0%);
-      opacity: 1;
+    0% {
+        transform: translateX(0%);
+        opacity: 1;
     }
-    50%{
+
+    50% {
 
         border-radius: 0rem;
         // transform: scale(1.2);
     }
+
     100% {
         border-radius: 0rem;
         transform: scale(1.6);
         // transform: translateX(-100%);
-    transform: translate(-50%, 50%);
-    opacity: 0;
-  }
+        transform: translate(-50%, 50%);
+        opacity: 0;
+    }
 }
 
 .slide-left {
-  animation: slideLeft 1.2s ease forwards;
+    animation: slideLeft 1.2s ease forwards;
 }
 
-.slide-left-down{
+.slide-left-down {
     animation: lastslideLeftDown 0.5s ease forwards;
 }
 
@@ -64,6 +67,15 @@ $cream : #FFEEDB;
     align-items: center;
     padding: 5rem 0rem;
 
+    .for_Box1_CB2_heading {
+        h2{
+            font-family: 'Bonita', sans-serif;
+            font-weight: 400;
+            font-size: 2.45rem;
+            color: #5C8271;
+        }
+    }
+
     .box1_image {
         @include flexcenter;
         // border: 1px solid orange;
@@ -75,6 +87,15 @@ $cream : #FFEEDB;
         img {
             height: 100%;
         }
+    }
+}
+
+.for_box2_content{
+    p{
+        font-family: 'Roboto';
+        color: #5C8271;
+        line-height: 16.35px;
+        font-size: 1rem
     }
 }
 
@@ -116,7 +137,8 @@ $cream : #FFEEDB;
             font-size: 1.3rem;
             // font-weight: 800;
         }
-        span{
+
+        span {
             font-size: 2rem;
             color: $dark_green_color;
         }
@@ -143,7 +165,7 @@ $cream : #FFEEDB;
         }
     }
 
-    .for_box2_content{
+    .for_box2_content {
         // border: 1px solid yellow;
         width: 11rem;
         font-size: 1rem;
@@ -156,7 +178,7 @@ $cream : #FFEEDB;
 
 }
 
-.add_caraousel_form_btn{
+.add_caraousel_form_btn {
     cursor: pointer;
     border: none;
     width: 5rem;
@@ -165,13 +187,13 @@ $cream : #FFEEDB;
     border-radius: 1rem;
     background-color: #ffeedbc2;
     color: $dark_green_color;
-    
-    &:hover{
+
+    &:hover {
         background: $cream;
     }
 }
 
-.add_caraousel_form{
+.add_caraousel_form {
     // border: 2px solid red;
     position: absolute;
     height: 30rem;
@@ -185,7 +207,8 @@ $cream : #FFEEDB;
     justify-content: space-between;
     align-items: center;
     padding: 0.6rem 2%;
-    .add_craousel_image{
+
+    .add_craousel_image {
         // border: 2px solid red;
         cursor: pointer;
         box-shadow: 0px 0px 10px black;
@@ -197,15 +220,16 @@ $cream : #FFEEDB;
         padding: 0.6rem 0rem;
         overflow: hidden;
 
-        img{
+        img {
             height: 95%;
         }
-        &:hover{
+
+        &:hover {
             box-shadow: 0px 0px 10px blue;
         }
     }
 
-    .add_caraousel_details{
+    .add_caraousel_details {
         // border: 2px solid green;
         display: flex;
         flex-direction: column;
@@ -214,16 +238,17 @@ $cream : #FFEEDB;
         width: 50%;
         padding: 0rem 2%;
 
-        .text_desc{
+        .text_desc {
             display: flex;
             flex-direction: column;
         }
     }
 
-    .form_action_btn{
+    .form_action_btn {
         display: flex;
         gap: 0.5rem;
-        button{
+
+        button {
             cursor: pointer;
             width: 5rem;
             height: 1.7rem;
@@ -233,10 +258,12 @@ $cream : #FFEEDB;
             border-radius: 2px;
             border: 1px solid rgba(0, 0, 0, 0.638);
         }
-        .action_cancel{
+
+        .action_cancel {
             background-color: rgb(228, 90, 90);
         }
-        .action_add{
+
+        .action_add {
             background-color: $cream;
             color: $dark_green_color;
         }
@@ -244,7 +271,7 @@ $cream : #FFEEDB;
 }
 
 @media screen and (max-width: 768px) {
-    .CB13{
+    .CB13 {
         display: none;
     }
 }
