--- a/client/src/pages/portfolio/components/ArchSpaceInterio.scss
+++ b/client/src/pages/portfolio/components/ArchSpaceInterio.scss
@@ -176,7 +176,8 @@ position: relative;
         font-size: 18px;
         font-style: italic;
         font-weight: 300;
-        margin-bottom: 40px;
+        // margin-bottom: 40px;
+        margin: 2rem auto;
         color: rgba(255, 255, 255, 0.9);
         text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
         letter-spacing: 1px;
