--- a/client/src/pages/service/style/Customers.scss
+++ b/client/src/pages/service/style/Customers.scss
@@ -127,7 +127,7 @@
     }
 
     .testimonial_card {
-        cursor: pointer;
+        // cursor: pointer;
         background-color: rgb(34, 34, 34);
         height: auto;
         width: 90%;
@@ -218,8 +218,8 @@
         }
 
         &:hover {
-            box-shadow: 0px 0px 10px blue;
-            transform: translateY(-5px);
+            // box-shadow: 0px 0px 10px blue;
+            // transform: translateY(-5px);
             transition: all 0.3s ease;
         }
     }
