--- a/client/src/pages/home/style/Testimonials.scss
+++ b/client/src/pages/home/style/Testimonials.scss
@@ -209,7 +209,7 @@
       }
 
       &:hover {
-        background: white;
+        background: rgba(95, 79, 64, 0.667);
         transform: scale(1.1);
         box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
       }
