--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -51,7 +51,8 @@ $primary_green: rgb(62, 153, 62);
     width: 3rem;
 
     img{
-        height: 100%
+        height: 100%;
+        filter: brightness(0) invert(1); 
     }
 }
 
