--- a/client/src/pages/service/style/Service.scss
+++ b/client/src/pages/service/style/Service.scss
@@ -7,7 +7,13 @@
     color: $cream;
     background-color: $dark_cover_color;
     position: absolute;
+    color: black;
+    
+    
+}
 
+.service_main_container{
+    padding: 4rem 0rem;
 }
 
 .service_page_heading {
@@ -15,14 +21,16 @@
     // border: 2px solid white;
     height: 6rem;
     margin-top: 4rem;
-
+    // display: none;
+    
     h1 {
         color: $cream;
+        color: black;
         font-family: "Crimson Text", serif;
         font-size: 3.25rem;
         letter-spacing: 6%;
     }
-
+    
     // background-color: $dark_cover_color;
 
 
@@ -37,39 +45,144 @@
     height: 20rem;
     padding: 1rem 5%;
     // background-color: $dark_cover_color;
-
+    
     .display_section {
-        // border: 2px solid yellow;
+        @include flexcenter;
+        border: 2px solid red;
+        background: white;
+        background: rgb(55, 55, 55);
+
+        padding: 0rem 1rem;
+        border-radius: 0.6rem;
+        box-shadow: 2px 2px 10px black;
         max-width: 18rem;
         height: 7rem;
+        height: 100%;
         display: flex;
         flex-direction: column;
         gap: 1rem;
         color: $cream;
-        justify-content: space-between;
-
+        justify-content: space-around;
+        
         h2 {
             font-family: 'Bonita', sans-serif;
             font-size: 2.4rem;
+            // color: black;
+            color: black;
+            color: white;
         }
-
+        
         p {
             font-family: 'Roboto', sans-serif;
             font-size: 1.3rem;
+            color: black;
+            color: white;
+            // color: white;
         }
     }
 }
 
 @media screen and (max-width: 768px) {
+    .service_design_details_sections{
+        flex-wrap: wrap !important;
+        gap: 0.1rem;
+    }
     .display_section{
         max-width: 12 !important;
+        width: 8rem !important;
+        height: 8rem !important;
 
         h2{
             font-size: 1.6rem !important;
         }
         p{
+            display: none;
             font-size: 0.9rem !important;
         }
     }
     
+}
+
+.service_image{
+    // border: 2px solid red;
+    // height: 40rem;
+    width: 100vw;
+    overflow: hidden;
+
+    img{
+        // width: 100%;
+        height: 100%;
+    }
+}
+
+.samehead{
+    position: absolute;
+    top: 40%;
+    left: 15%;
+    font-size: 8rem;
+    font-family: 'Bonita', sans-serif;
+    color: $cream;
+}
+.sub_heading{
+    position: absolute;
+    top: 60%;
+    left: 33%;
+    font-size: 4rem;
+    font-family: 'Bonita', sans-serif;
+    color: $cream;
+    // color: white;
+    // text-shadow: 2px 2px 8px red;
+    
+}
+
+@media screen and (max-width: 1248px ) {
+    .samehead{
+        position: absolute;
+        top: 40%;
+        left: 14%;
+        font-size: 5rem;
+        font-family: 'Bonita', sans-serif;
+        color: $cream;
+    }
+    .sub_heading{
+        position: absolute;
+        top: 60%;
+        left: 26%;
+        font-size: 3rem;
+        font-family: 'Bonita', sans-serif;
+        color: $cream;
+        // color: white;
+        // text-shadow: 2px 2px 8px red;
+        
+    }
+    
+}
+
+@media screen and (max-width: 768px ) {
+    .samehead{
+        top: 35% !important;
+        left: 15% !important;
+        font-size: 4rem !important;
+    }
+    .sub_heading{
+        top: 60% !important;
+        left: 16% !important;
+        font-size: 2.5rem !important;
+        
+    }
+    
+}
+
+@media screen and (max-width: 486px) {
+    
+    .samehead{
+        top: 30% !important;
+        left: 2% !important;
+        font-size: 3rem !important;
+    }
+    .sub_heading{
+        top: 40% !important;
+        left: 18% !important;
+        font-size: 2rem !important;
+    }
 }
