--- a/client/src/pages/home/style/Home.scss
+++ b/client/src/pages/home/style/Home.scss
@@ -58,7 +58,7 @@
     // border: 2px solid red;
     // min-height: 100vh;
     position: relative;
-    background-color: #FFEEDB;
+    background-color: #ffffff;
     // display: flex;
     // justify-content: center;
     // align-items: center;
