--- a/client/src/pages/home/projects/Projects.css
+++ b/client/src/pages/home/projects/Projects.css
@@ -12,7 +12,7 @@
   font-size: 3rem;
   font-family: 'Lora', serif;
   margin-bottom: 1rem;
-  color: rgb(80, 80, 80);
+  color: rgb(241, 241, 241);
   color: white;
 }
 
@@ -68,13 +68,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.541);
   transition: background-color 0.3s ease;
   z-index: 1;
+
 }
 
 .project:hover .project-overlay {
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(128, 122, 122, 0.247);
 }
 
 .project::after {
@@ -83,5 +84,14 @@
   bottom: 20px;
   left: 20px;
   z-index: 2;
+}
+h4{
+  font-size: 2rem;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  margin-top: 10px;
+  font-weight: normal;
+  padding-top: 2rem;
+  z-index: 4;
 }
 
