--- a/client/src/pages/about/About.css
+++ b/client/src/pages/about/About.css
@@ -53,11 +53,11 @@
 .hero-content-text h1 {
   font-size: 4em;
   margin-bottom: 20px;
-  font-family: "Lora", serif;
+  /* font-family: "Lora", serif; */
   font-family: 'Bonita', sans-serif;
 
   font-weight: bold;
-  color: #f09a5c;
+  color: #d83434;
 }
 
 .hero-content-text h1 span {
@@ -169,6 +169,7 @@
 }
 
 
+
 /* -----------------------ACHIEVEMENT SECTION ------------------------ */
 
 .achievements-section {
@@ -210,17 +211,22 @@
 .image-wrapper {
   flex: 1 1 300px;
   max-width: 400px;
+  max-height: 20rem;
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
 }
 
 .image-wrapper img {
   /* width: 100%; */
   /* height: auto; */
-  width: auto;
-  height: 100%;
+  width: 100%;
   display: block;
+  background-size: contain;
 }
 
 .stats {
@@ -273,6 +279,7 @@
 
 .value-item h4 {
   color: #7cb896;
+  color: white;
   margin-bottom: 5px;
   font-family: "Lora", serif;
   font-size: 1.4rem;
@@ -497,6 +504,7 @@
   align-items: center;
   gap: 50px;
   background-color: #7cb896;
+  background-color: white;
   background-image: url('./Vector.png');
   background-repeat: no-repeat;
   padding: 30px 80px;
