--- a/client/src/pages/home/style/HomeService.scss
+++ b/client/src/pages/home/style/HomeService.scss
@@ -18,7 +18,7 @@
     .text {
       font-size: 2rem;
       font-size: 4rem;
-      font-family: "Crimson Text", serif;
+      font-family: 'Bonita', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
