--- a/client/src/pages/home/style/Marquee.scss
+++ b/client/src/pages/home/style/Marquee.scss
@@ -26,7 +26,7 @@
   display: flex;
   align-items: center;  
   gap: 124.62px;
-  height: 80px;
+  height: 10rem;
   padding-inline: 2rem; 
 
   @media (max-width: 1024px) {
